fixed more spacing in about

--- a/src/styles/partials/_about.scss
+++ b/src/styles/partials/_about.scss
@@ -47,8 +47,8 @@
 
             .aboutContent {
                 display: flex;
-                width: 600px;
-                max-width: 600px;
+                width: 715px;
+                max-width: 715px;
                 min-height: 300px;
                 justify-content: center;
                 flex-direction: column;
